# hirshfeld

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  HOW-TO-RELEASE  HOW-TO-RELEASE.md  Makefile.am  NEWS  NEWS.md  README  README.SVN  README.md  TODO  config.h.in  configure.ac  configure.in
data/: 1.data  1.fchk  15.data  15.fchk  16.data  16.fchk  6.data  6.fchk  7.data  7.fchk  8.data  8.fchk  CMakeLists.txt  Makefile.am
debian/: changelog  control  copyright  rules
lib/: Makefile.am  long-options.h  version_etc_copyright.c
m4/: gnulib-cache.m4  gnulib-comp.m4
snap/: snapcraft.yaml
src/: CMakeLists.txt  Makefile.am  atom.cpp  atom.hpp  atomdata.cpp  atomdata.hpp  base_directory.cpp  base_directory.hpp  basename.c  contraction.cpp  contraction.hpp  convert.cpp  debug.cpp  debug.hpp  hirshfeld.cpp  hirshfeld.hpp  lebedev.cpp  lebedev.hpp  main.cpp  molecule.cpp  molecule.hpp  molorbit.hpp  port.h  slater.cpp  slater.hpp
tests/: HCN.fchk  HCN.out
